feat: #20 add eventService editEventHall